Fixed visibility issue in Firefox
In certain circumstances Firefox does not properly hide the backside of a flipped element. Added a line to alert the browser that it needs to re-render an element

--- a/src/style.css
+++ b/src/style.css
@@ -286,6 +286,7 @@ main {
     height: 100%;
     -webkit-backface-visibility: hidden; /* required for Safari */
     backface-visibility: hidden;
+    will-change: transform;   /* Hints to the browser */
 }
 
 .box-front {
